Fix courselist overlapping footer

--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -3,4 +3,5 @@ footer {
     bottom: 0;
     width: 100%;
     height: 60px;
+    z-index: 2;
 }
